# airbnb_cdmx

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  datasets.md  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: mkdocs.yml  publish.yml
src/airbnb_cdmx/: __init__.py  core.py  datasets.py
