[metadata]
name = airbnb_cdmx
version = 0.1.0
author = karinaf1427
author_email = karinaf1427@gmail.com
description = A curated collection of airbnb rental price datasets for data analysis, real estate research, and education
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/karinaf1427/airbnb_cdmx
project_urls =
    Bug Tracker = https://github.com/karinaf1427/airbnb_cdmx
    Documentation = https://github.com/karinaf1427/airbnb_cdmx
    Source Code = https://github.com/karinaf1427/airbnb_cdmx
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Sociology
    Topic :: Database
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    Natural Language :: English
keywords = datasets, real estate, data analysis, data science, research, kaggle

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=1.5
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*
    docs*
    examples*

[options.package_data]
crimedatasets = data/*.csv

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov
    black
    flake8
    mypy
docs =
    mkdocs
    mkdocs-material

# Configuration for pytest
[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    --verbose
    --cov=crimedatasets
    --cov-report=html
    --cov-report=term

# Configuration for coverage
[coverage:run]
source = airbnb_cdmx
omit =
    */tests/*
    */test_*.py
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:

# Configuration for flake8
[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .venv,
    env,
    venv

# Configuration for mypy
[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False